[package]
name = "mochi_scheduler"
version = "0.1.0"
edition = "2024"
description = "A cross-platform scheduler"
license = "MIT"

[[bin]]
name = "msc"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
colored = "3.1.1"
directories = "6"
interprocess = { version = "2", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "process",
    "io-util",
    "sync",
    "fs",
    "time",
] }
