[package]
name = "mochi_scheduler"
version = "0.1.0"
edition = "2024"
description = "A cross-platform scheduler"
license = "MIT"

[[bin]]
name = "msc"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
colored = "3.1.1"
directories = "6"
interprocess = { version = "2", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
terminal_size = "0.4"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "process",
    "io-util",
    "sync",
    "fs",
    "time",
    "signal",
] }

# Killing a job means killing its whole process tree (e.g. `pixi run ... python`),
# which needs OS-specific primitives: a Job Object on Windows, a process group on Unix.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
